@@ -20,33 +20,28 @@ public class CompanyService {
     public static final String COMPANY_NOT_FOUND = "Company Not Found";
     private final CompanyRepository companyRepository;
     private final EmployeeRepository employeeRepository;
-    private final CompanyMapper companyMapper;
-
-    public CompanyService(CompanyRepository companyRepository, EmployeeRepository employeeRepository, CompanyMapper companyMapper) {
+    public CompanyService(CompanyRepository companyRepository, EmployeeRepository employeeRepository) {
         this.companyRepository = companyRepository;
         this.employeeRepository = employeeRepository;
-        this.companyMapper = companyMapper;
     }
 
-    public List<CompanyResponse> getAll() {
-        List<Company> companies = companyRepository.findAll();
-        return companies.stream().map(companyMapper::toResponse).collect(Collectors.toList());
+    public List<Company> getAll() {
+        return companyRepository.findAll();
     }
 
-    public CompanyResponse create(Company company){
-        return companyMapper.toResponse(companyRepository.save(company));
+    public Company create(Company company){
+        return companyRepository.save(company);
     }
 
-    public CompanyResponse findByCompanyId(Integer companyId){
-        return companyMapper.toResponse(companyRepository.findById(companyId).get());
+    public Company findByCompanyId(Integer companyId){
+        return companyRepository.findById(companyId).get();
     }
 
-    public CompanyResponse update(Integer companyId, Company companyUpdate){
+    public Company update(Integer companyId, Company companyUpdate){
         if (findByCompanyId(companyId)!=null){
             companyUpdate.getEmployees().forEach(employeeRepository::save);
             companyUpdate.setCompanyId(companyId);
-            //return companyRepository.save(companyUpdate);
-            companyMapper.toResponse(companyRepository.save(companyUpdate));
+            return companyRepository.save(companyUpdate);
         }
         throw new CompanyNotFound(COMPANY_NOT_FOUND);
     }
@@ -56,15 +51,13 @@ public class CompanyService {
         company.ifPresent(companyRepository::delete);
     }
 
-    public List<CompanyResponse> getByPage(int page, int pageSize){
+    public List<Company> getByPage(int page, int pageSize){
         Pageable pageable = PageRequest.of(page,pageSize);
-        List<Company> companies = companyRepository.findAll(pageable).toList();
-        return companies.stream().map(companyMapper::toResponse).collect(Collectors.toList());
+        return companyRepository.findAll(pageable).toList();
     }
 
     public List<Employee> getEmployees(Integer companyId){
         return companyRepository.findById(companyId)
                 .orElseThrow(()->new CompanyNotFound(COMPANY_NOT_FOUND)).getEmployees();
-
     }
 }
